--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.20.0",
     "knex": "^0.19.1",
+    "nodemon": "^1.19.1",
     "sqlite": "^3.0.3"
+  },
+  "scripts": {
+    "server": "nodemon index.js"
   }
 }
